fixed the extra space in responsive

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -528,4 +528,7 @@ div .welcome{
     width: 255px;
     height: 255px;
   }
+  #title {
+    width: 100%;
+  }
 }
